Rename server to netlify folder. Finish e2e tests. Added the data attrubutes for tests

--- a/src/components/icons/index.module.css
+++ b/src/components/icons/index.module.css
@@ -2,8 +2,8 @@
   display: flex;
   align-items: stretch;
 
-  width: 100%;
-  height: 100%;
+  width: var(--icon-width, 100%);
+  height: var(--icon-height, 100%);
 }
 
 .cIcon > svg {
