--- a/src/pages/Home/components/FirstView/index.module.css
+++ b/src/pages/Home/components/FirstView/index.module.css
@@ -27,8 +27,14 @@
 .cSearchForm {
   position: relative;
 
-  max-width: 60%;
+  max-width: 85%;
   margin: 0 auto 1rem auto;
+}
+
+@media screen and (min-width: 640px) {
+  .cSearchForm {
+    max-width: 60%;
+  }
 }
 
 @media screen and (min-width: 992px) {
