--- a/src/pages/Home/components/FirstView/index.module.css
+++ b/src/pages/Home/components/FirstView/index.module.css
@@ -1,8 +1,19 @@
+.cBlock {
+  padding-top: 3rem;
+}
+
+@media screen and (min-width: 640px) {
+  .cBlock {
+    padding-top: 5rem;
+  }
+}
+
 .cTitle {
-  margin-bottom: 0rem;
+  margin: 0rem;
 
   font-size: 3.5rem;
   font-family: var(--cursive-font);
+  font-weight: 300;
 
   text-align: center;
   color: var(--title-color);
@@ -74,5 +85,5 @@
 }
 
 .cPreviewImage {
-  max-width: 100vw;
+  max-width: 100%;
 }
