--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -5,7 +5,7 @@
 
   padding: 0.5rem 1rem;
 
-  background-color: rgb(var(--dark-color-rgb) / 0.9);
+  background-color: #000c;
 }
 
 .cNavigationPanel {
