--- a/src/pages/Home/components/Sales/index.module.css
+++ b/src/pages/Home/components/Sales/index.module.css
@@ -23,7 +23,13 @@
 }
 
 .cSalesPoster {
-  width: 80%;
+  width: 100%;
+}
+
+@media screen and (min-width: 640px) {
+  .cSalesPoster {
+    width: 80%;
+  }
 }
 
 .cNavigationButtons {
