--- a/src/components/Parallax/index.module.css
+++ b/src/components/Parallax/index.module.css
@@ -1,4 +1,6 @@
 .cParallax {
+  --perspective: 8;
+
   position: relative;
 
   height: 100vh;
@@ -6,5 +8,6 @@
   overflow-x: hidden;
   overflow-y: auto;
 
-  perspective: 1px;
+  perspective: calc(var(--perspective) * 1px);
+  perspective-origin: 0%;
 }
