--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,6 +1,8 @@
 .cHeaderContainer {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  width: 100%;
   z-index: 10;
 
   padding: 0.5rem 1rem;
