Refactor the Cart page. Open the Cart button in header and *Add to cart* in card for anonymous users. Replace http:// with https:// in posters. Stretch posters on all screens. Fix background color of the menu on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,10 @@ body {
   flex: 1;
 }
 
+.page main.dark {
+  background-color: #111222;
+}
+
 .maximum-width {
   max-width: 1140px;
   margin-left: auto;
