--- a/src/components/Footer/index.module.css
+++ b/src/components/Footer/index.module.css
@@ -2,7 +2,7 @@
   padding: 4rem 2rem;
 
   text-align: center;
-  background-color: var(--dark-color);
+  background-color: #111222;
 }
 
 .cSocialLink {
