--- a/src/pages/Cart/index.module.css
+++ b/src/pages/Cart/index.module.css
@@ -1,61 +1,236 @@
 .cTitle {
-  margin: initial 1em;
+  margin: 6rem 1rem 3rem 1rem;
+
+  font-weight: 500;
+
+  color: var(--default-text-color);
 
   text-align: center;
-}
-
-.cCardContainer {
-  display: flex;
-  flex-direction: column;
-
-  position: relative;
-}
-
-.cCardContainer::before {
-  content: attr(data-quantity);
-
-  position: absolute;
-  top: -0.5rem;
-  left: -0.5rem;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 1.7rem;
-  height: 1.7rem;
-
-  color: var(--dark-color);
-  background-color: var(--accent-text-color);
-  border-radius: 50%;
-}
-
-.cCard {
-  flex: 1;
-}
-
-.cButton {
-  display: block;
-
-  width: 100%;
-  padding: 1rem 0.5rem;
-
-  font-size: 1rem;
-
-  color: var(--dark-color);
-  background-color: var(--accent-text-color);
-
-  border: none;
-  border-radius: 3px;
-
-  cursor: pointer;
-}
-
-.cButton:first-child {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
 }
 
 .cEmptyMessage {
   text-align: center;
+}
+
+.cContent {
+  display: grid;
+  grid-template: auto / auto;
+  gap: 2rem;
+}
+
+@media screen and (min-width: 767px) {
+  .cContent {
+    grid-template: auto / 7fr 5fr;
+  }
+}
+
+.cBlock {
+  margin-top: 3rem;
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
+}
+
+.cPromoBlock {
+  order: 1;
+}
+
+.cBlockTitle {
+  display: flex;
+  justify-content: space-between;
+
+  margin-top: 0;
+  margin-bottom: 1rem;
+
+  font-size: 1.375rem;
+
+  color: #e6ee9c;
+}
+
+.cBlockTitle .cItemsCount {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 1.8rem;
+  height: 1.8rem;
+
+  font-size: 1.1rem;
+
+  border-radius: 50%;
+  background-color: rgb(12 110 253);
+  color: var(--light-color);
+}
+
+.cLightBlock {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  padding: 0.5rem 1rem;
+
+  background-color: var(--light-color);
+}
+
+.cLightBlock.cPromoInfoTop {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+
+  color: rgb(25 135 84);
+}
+
+.cLightBlock .cPromoTitle {
+  margin: 0;
+
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+.cLightBlock .cPromoCode {
+  margin: 0;
+
+  font-size: 0.875rem;
+
+  text-transform: uppercase;
+}
+
+.cLightBlock.cPromoInfoBottom {
+  margin-bottom: 1rem;
+
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+
+  color: var(--dark-color);
+  background-color: #eee;
+}
+
+.cLightBlock.cPromoInfoBottom .cItemsPrice {
+  font-weight: 700;
+}
+
+.cRedeemBlock {
+  padding: 0.5rem;
+
+  background-color: var(--light-color);
+  border-radius: 4px;
+}
+
+.cRedeemBlock input {
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+
+  font-size: 1rem;
+
+  border: 1px solid #656;
+  border-top-left-radius: 0.25rem;
+  border-bottom-left-radius: 0.25rem;
+
+  color: #656;
+  background-color: var(--default-text-color);
+}
+
+.cRedeemBlock input::placeholder {
+  color: #6c757d;
+}
+
+.cRedeemField {
+  display: flex;
+}
+
+.cRedeemBlock button[type="submit"] {
+  padding: 0.375rem 0.75rem;
+
+  border: none;
+  border-radius: 0 0.25rem 0.25rem 0;
+
+  font-size: 1rem;
+  line-height: 1.5;
+
+  color: var(--light-color);
+  background-color: #6c757d;
+
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+  cursor: pointer;
+}
+
+.cRedeemBlock button[type="submit"]:hover {
+  background-color: #5c636a;
+}
+
+.cUserNamePrefixElement {
+  width: 3rem;
+}
+
+.cBillingBlockFields {
+  display: grid;
+  grid-template: auto / repeat(2, 1fr);
+  gap: 1rem;
+}
+
+.cBillingBlockFields > * {
+  grid-column: span 2;
+}
+
+.cBillingBlockFields :first-child,
+.cBillingBlockFields :nth-child(2) {
+  grid-column: span 1;
+}
+
+.cDelimiter {
+  display: block;
+
+  height: 1px;
+
+  margin: 1.5rem 0.7rem;
+
+  border: none;
+  opacity: 0.25;
+  background-color: currentColor;
+}
+
+.cMinOffset {
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
+}
+
+.cPaymentBlockFields {
+  display: grid;
+  grid-template: auto / auto;
+  gap: 1rem;
+}
+
+@media screen and (min-width: 767px) {
+  .cPaymentBlockFields {
+    grid-template: auto / repeat(4, 1fr);
+  }
+
+  .cPaymentBlockFields :first-child,
+  .cPaymentBlockFields :nth-child(2) {
+    grid-column: span 2;
+  }
+
+  .cPaymentBlockFields :nth-child(3),
+  .cPaymentBlockFields :nth-child(4) {
+    grid-column: span 1;
+  }
+}
+
+.cCheckoutButton {
+  width: 100%;
+  padding: 0.8rem 1.6rem;
+  margin-bottom: 1rem;
+
+  font-size: 1.25rem;
+
+  color: var(--light-color);
+  background-color: #0d6efd;
+  cursor: pointer;
+  border: none;
+  border-radius: 0.3em;
+
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out;
+}
+
+.cCheckoutButton:hover {
+  background-color: #0b5ed7;
 }
