--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -14,6 +14,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .cActionsPanel {
