--- a/src/pages/Home/components/Arrivals/index.module.css
+++ b/src/pages/Home/components/Arrivals/index.module.css
@@ -7,6 +7,12 @@
   background-color: var(--dark-background-color);
 }
 
+.cGrid {
+  max-width: 960px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .cArrivalsTitle {
   margin: 2rem 0 1rem 0;
 
