Add maximum width of the constrained Header and Arrivals block on large screen. Limit the width of the images in book cards to 12rem.

--- a/src/components/BookCard/index.module.css
+++ b/src/components/BookCard/index.module.css
@@ -35,6 +35,12 @@
   }
 }
 
+@media screen and (min-width: 500px) {
+  .cCardImage {
+    max-width: 12rem;
+  }
+}
+
 .cCardImage > img {
   width: 100%;
   height: 100%;
