--- a/src/pages/Home/components/Arrivals/index.module.css
+++ b/src/pages/Home/components/Arrivals/index.module.css
@@ -13,6 +13,12 @@
   margin-right: auto;
 }
 
+@media screen and (min-width: 1000px) {
+  .cGrid {
+    max-width: 1140px;
+  }
+}
+
 .cArrivalsTitle {
   margin: 2rem 0 1rem 0;
 
